--- a/circle.yml
+++ b/circle.yml
@@ -30,10 +30,17 @@ workflows:
       # a job must have a filters tags section to run as a part of a tag push and
       # all its transitively dependent jobs must also have a filters tags section.
       # ^ This is key, test must have tag filters since deploy requires it.
-      - test
+      - test:
+          filters:
+            tags:
+              only: /.*/
+            branches:
+              only: /.*/
       - deploy:
           requires:
             - test
           filters:
             tags:
               only: /v[0-9]+(\.[0-9]+)*/
+            branches:
+              ignore: /.*/
