--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,7 @@ defaults: &defaults
   working_directory: /go/src/github.com/packetloop/terraform-provider-singularity
   docker:
     # specify the version
-    - image: circleci/golang:1.9.4
+    - image: circleci/golang:1.10
 
 jobs:
   test:
@@ -21,7 +21,7 @@ jobs:
     steps:
       - checkout
       - run: make build
-      - run: ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME --replace `git describe --tags` release/
+      - run: make release
 
 workflows:
   version: 2
@@ -44,3 +44,11 @@ workflows:
               only: /v[0-9]+(\.[0-9]+)*/
             branches:
               ignore: /.*/
+
+
+
+
+
+
+
+
