--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,17 +3,17 @@
 builds:
 - env:
   - CGO_ENABLED=0
-archive:
-  replacements:
-    darwin: Darwin
-    linux: Linux
-    windows: Windows
-    386: i386
-    amd64: x86_64
+  name_template: '{{ .ProjectName }}_v{{ .Version }}_{{ .Os }}_{{ .Arch }}'
+  goos:
+    - windows
+    - darwin
+    - linux
+  goarch:
+    - amd64
 checksum:
   name_template: 'checksums.txt'
 snapshot:
-  name_template: "{{ .Tag }}-next"
+  name_template: "{{ .Tag }}-{{.Commit}}"
 changelog:
   sort: asc
   filters:
