--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -9,6 +9,15 @@ builds:
     - linux
   goarch:
     - amd64
+  ignore:
+    - goos: darwin
+      goarch: 386
+    - goos: linux
+      goarch: arm
+      goarm: 7
+archive:
+  name_template: "{{ .ProjectName }}_v{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+  format: binary
 checksum:
   name_template: 'checksums.txt'
 snapshot:
