--- a/circle.yml
+++ b/circle.yml
@@ -20,6 +20,7 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+      - run: curl -sL https://git.io/goreleaser | bash
       - run: make release
 
 workflows:
