--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,5 +1,10 @@
 # This is an example goreleaser.yaml file with some sane defaults.
 # Make sure to check the documentation at http://goreleaser.com
+env:
+  - GO111MODULE=on
+before:
+  hooks:
+    - go mod download
 builds:
 - env:
   - CGO_ENABLED=0
@@ -16,9 +21,13 @@ builds:
       goarch: arm
       goarm: 7
 archives:
-  - id: terraform-provider-singularity
-    name_template: "{{ .ProjectName }}_v{{ .Version }}_{{ .Os }}_{{ .Arch }}"
-    format: binary
+- replacements:
+    darwin: Darwin
+    linux: Linux
+    windows: Windows
+    amd64: x86_64
+  name_template: "{{ .ProjectName }}_v{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+  format: binary
 checksum:
   name_template: 'checksums.txt'
 snapshot:
